# EdgeShortcutTool

./: Cargo.toml  LICENSE  README.md  app.manifest  build.rs
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
src/: main.rs  shortcut.rs
