[package]
name = "EdgeShortcutTool"
version = "1.3.0"
edition = "2024"
rust-version = "1.85"
build = "build.rs"
license = "MIT"

[dependencies]
native-windows-gui = "1.0.13"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
winresource = "0.1.31"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
